# Rustalgo

./: Cargo.toml  LICENSE  README.md
src/: main.rs  utils.rs
src/algorithms/: recursive.rs  searching.rs  sorting.rs
